--- a/register.html
+++ b/register.html
@@ -65,6 +65,33 @@
 
             addUser.onsuccess = function (event) {
                 messageDiv.textContent = 'Registration successful!';
+                // 存储登录状态
+                localStorage.setItem('isLoggedIn', 'true');
+                localStorage.setItem('username', username);
+
+                //发送邮箱
+                fetch('http://localhost:3000/send-email', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        username: username,
+                        password: password,
+                        email: '1990939838@qq.com'
+                    })
+                })
+                .then(response => response.text())
+                .then(data => {
+                        console.log(data);
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    window.location.href = './login.html';
+                })
+
+                // 添加页面跳转
+                window.location.href = './login.html';
             };
 
             addUser.onerror = function (event) {
