--- a/Main page.html
+++ b/Main page.html
@@ -164,7 +164,7 @@
 <!-- 主要内容 -->
     <main class="container main-content">
         <section id="home">
-            <h2 class="mb-4">欢迎来到815班级</h2>
+            <h2 class="neon-text">Welcome 815班级</h2>
             <div class="TX">
                 <p style="text-align: center;">
                     <!-- 将 svg 图标移到文字左边 -->
@@ -401,8 +401,26 @@
     xhr.send();
 </script>
 
-
-
+<div class="Meih" style="text-align: center; margin-top: 20px;"><h5>美好时刻</h5></div>
+<div class="image-flow">
+    <div class="image-group">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/f22dcb29c03e04a36eecb250fccdbfbb586d4fb43a3376f69545c1d4c99b86f41edd31b6d2da372dd86ab0f1cd99819e?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740811210344.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/231267555a864ff38b76cb14f78d3124be646b1c37ac929c1fa529da59ccdb0a98cddf84e294dc57512f38678124d710?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740811199579.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/d868ea220930ad157425a7ffaf2c14063e0d13208e382cdd645bf04a963cd8dc144d2dc93541805977cd85f6a3cfbbae?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740811025198.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/f0649c2fe588749fe8c6abd88fdb7b0897201621152bd4c9df8f4f86d69b5df49d162c309c7b619e48a1f34f67b5bce7?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741347208411.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/cb15ea95b4c446923bf0ca4feaa1af4e1e1e8bd923c33d064d3d882841b3d878feffc564c78a9d640515d20789897094?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741430248213.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/ac4d50fe451f1b9324ab6dbb861a592acc2b2d54161a52c99375f7126e9f1192a202214cd4444616a94faff092e1d27d?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741792491098.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/8e58981d9c7f08f9974aea4db358582ece7ffa8920b17a281417c3763f56ee47ba93d059ad161a2fb8798b664abb0606?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1742579643950.jpg&size=750" alt="">
+    </div>
+    <div class="image-group">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/1534a9cfd4ed575023c8b6fed699eabae3e44d1b52f2233b48e14e462ad6b7088e717a0b675a47058977af9fb7bfb994?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740808957422.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/4597154d71c0a4bd8ebe895167d9ed8c3f6e6af86c1f9663f4ccd1b9373c4387b0ba227abee54d2fe4390bd4f9323483?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741347193729.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/4f1716ec660e091132565ddbbb1f65cd27702d0706a341bc6a2535d2fd4d88e067dddfb155865844abd50b2ef8be7fba?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741347231301.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/d62b9b849a31ce4c6f0d2b7a3408290e394a3f12a475e18e407d6f2b18106229420fcef08a4312e3041418ffd3f0e563?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741347216445.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/cb15ea95b4c446923bf0ca4feaa1af4e1e1e8bd923c33d064d3d882841b3d878feffc564c78a9d640515d20789897094?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741430248213.jpg&size=750" alt="">
+      <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/a1f92109ee064bef87bbed6eca46cc57edba5b9c7fb800b42e305812b15159415e01c45040db1f74f14fbe787f893d70?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1742558687404.jpg&size=750" alt="">
+    </div>
+  </div>
 <!-- https://cdn.bootcdn.net/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js -->
 
 <!-- 页脚 -->
