--- a/Contact Us.html
+++ b/Contact Us.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <h1>站长：揽月不辞万里</h1>
-    <p>An advanced web engineer with a cumulative learning duration of 4 years.</p>
+    <p>with 4 years of accumulated web learning experience.</p>
 
     <div>
         <button class="Dai_ma" onclick="llky()">
