--- a/ai对话.html
+++ b/ai对话.html
@@ -30,7 +30,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
-        nav .container { /* 调整导航栏容器样式 */
+        nav .container {
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
@@ -63,28 +63,36 @@
             color: #e5e7eb;
         }
 
-        .chat-wrapper {
-            background-color: white;
-            border-radius: 16px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-            width: 80%; /* 增加宽度 */
-            max-width: 800px; /* 增加最大宽度 */
-            overflow: hidden;
-            margin: 80px auto auto;
-            /* 增加顶部外边距，避免被导航栏遮挡 */
+        /* 直接显示的API选择样式 */
+        .api-display {
+            display: flex;
+            justify-content: center;
+            padding: 8px;
+            background-color: #f9fafb;
+            border-bottom: 1px solid #e5e7eb;
+            /* 添加顶部外边距，避免被导航栏遮挡 */
+            margin-top: 60px; 
         }
 
-        .chat-header {
+        .api-display-option {
+            padding: 8px 16px;
+            margin: 0 4px;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .api-display-option:hover {
+            background-color: #e5e7eb;
+        }
+
+        .api-display-option.active {
             background-color: #3b82f6;
             color: white;
-            padding: 16px;
-            text-align: center;
-            font-size: 20px;
-            font-weight: 600;
         }
 
         .chat-container {
-            max-height: 600px; /* 增加最大高度 */
+            max-height: 600px;
             overflow-y: auto;
             padding: 16px;
             display: flex;
@@ -174,32 +182,6 @@
             background-color: #2563eb;
         }
 
-        /* 直接显示的API选择样式 */
-        .api-display {
-            display: flex;
-            justify-content: center;
-            padding: 8px;
-            background-color: #f9fafb;
-            border-bottom: 1px solid #e5e7eb;
-        }
-
-        .api-display-option {
-            padding: 8px 16px;
-            margin: 0 4px;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .api-display-option:hover {
-            background-color: #e5e7eb;
-        }
-
-        .api-display-option.active {
-            background-color: #3b82f6;
-            color: white;
-        }
-
         /* 思考动画样式 */
         .thinking-animation {
             display: flex;
@@ -257,16 +239,6 @@
 </head>
 
 <body>
-    <script>
-        // 检查登录状态
-        const isLoggedIn = localStorage.getItem('isLoggedIn');
-        if (!isLoggedIn || isLoggedIn !== 'true') {
-            alert('请先登录！');
-            window.location.href = './login.html';
-            localStorage.setItem('isLoggedIn', 'false');
-            localStorage.setItem('username', username);
-        }
-    </script>
 
     <!-- 导航栏 -->
     <nav>
@@ -279,27 +251,25 @@
         </div>
     </nav>
 
-    <div class="chat-wrapper">
-        <div class="chat-header">AI对话</div>
-        <!-- 直接显示API选项 -->
-        <div class="api-display">
-            <span class="api-display-option active" data-api="yiyan">豆包API</span>
-            <span class="api-display-option" data-api="glm">GLM API</span>
-            <span class="api-display-option" data-api="ernie">AI · Chat ERNIE</span>
-            <span class="api-display-option" data-api="deepseek">DeepSeek</span>
-        </div>
-        <div class="chat-container">
-            <div id="chat-messages" class="space-y-2">
-            </div>
-        </div>
-        <div class="input-area">
-            <input type="text" id="user-input" placeholder="输入你的问题">
-            <button id="send-button">
-                <i class="fa-solid fa-paper-plane"></i>
-            </button>
-        </div>
-        <button id="clear-chat-button">清空聊天记录</button>
+    <!-- 直接显示API选项 -->
+    <div class="api-display">
+        <span class="api-display-option active" data-api="yiyan">豆包API</span>
+        <span class="api-display-option" data-api="glm">GLM API</span>
+        <span class="api-display-option" data-api="ernie">AI · Chat ERNIE</span>
+        <span class="api-display-option" data-api="deepseek">DeepSeek</span>
     </div>
+    <div class="chat-container">
+        <div id="chat-messages" class="space-y-2">
+        </div>
+    </div>
+    <div class="input-area">
+        <input type="text" id="user-input" placeholder="输入你的问题">
+        <button id="send-button">
+            <i class="fa-solid fa-paper-plane"></i>
+        </button>
+    </div>
+    <button id="clear-chat-button">清空聊天记录</button>
+
     <script>
         const chatMessages = document.getElementById('chat-messages');
         const userInput = document.getElementById('user-input');
@@ -426,21 +396,6 @@
 
                 const errorMessageDiv = document.createElement('div');
                 errorMessageDiv.classList.add('bot-message');
-                const errorMessageContent = document.createElement('div');
-                errorMessageContent.classList.add('message-content');
-                let errorText;
-                if (error.message.includes('402')) {
-                    errorText = document.createElement('span');
-                    errorText.textContent = '请求失败，此 API 需要付费使用，请检查您的账户余额或联系管理员。';
-                } else {
-                    errorText = document.createElement('span');
-                    errorText.textContent = `请求出错: ${error.message}`;
-                }
-                errorMessageContent.appendChild(errorText);
-                errorMessageDiv.appendChild(errorMessageContent);
-                chatMessages.appendChild(errorMessageDiv);
-
-                chatMessages.scrollTop = chatMessages.scrollHeight;
             }
         };
 
