--- a/Main page.html
+++ b/Main page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新城中学初二15班</title>
+    <title>跳转到新线路</title>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./Main page.css">
     <link rel="icon" href="./图标.png" type="image/x - icon">
@@ -55,6 +55,8 @@
 
 </head>
 <body>
+    <script>window.location.href = 'https://xinc815.pages.dev/'</script>
+
     <script>
         // 检查登录状态
         const isLoggedIn = localStorage.getItem('isLoggedIn');
